--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=user
+spring.datasource.url=jdbc:postgresql://pg-3b1ff89f-balajidaggumilli67944-2d13.g.aivencloud.com:22701/hana_dev
+spring.datasource.username=application
+spring.datasource.password=application@123
+
+server.port=8080
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
